Thu Mar 24 14:20:21 2016  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* strftime.c (STRFTIME): deal with case conversion flags for
	  recursive formats.

Thu Mar 24 12:43:26 2016  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* ext/date/date_core.c (dt_lite_iso8601): strftimev() always
	  returns a String, so append them directly.

	* ext/date/date_core.c (d_lite_jisx0301, iso8601_timediv),
	  (dt_lite_jisx0301): format by the format string in local buffer
	  to prevent intermediate strings from GC.

	* ext/date/date_core.c (mk_inspect_raw, mk_inspect): inspect by
	  "%+"PRIsVALUE, to prevent intermediate strings from GC.

Thu Mar 24 11:43:32 2016  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* strftime.c (rb_strftime_with_timespec): remove unnecessary
	  check, as `s` equals to `endp` when recursed STRFTIME resized
	  the capacity same as the size.

Wed Mar 23 21:48:00 2016  Kenta Murata  <mrkn@mrkn.jp>

	* enum.c (ary_inject_op): put subtract operation out of if-clause.

Wed Mar 23 21:38:00 2016  Kenta Murata  <mrkn@mrkn.jp>

	* enum.c (ary_inject_op): Use Kahan's compensated summation algorithm
	  for summing up float values.

Wed Mar 23 20:56:59 2016  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* strftime.c (rb_strftime_with_timespec): append formatted results
	  to the given string with expanding, and also deal with NUL chars.

	* strftime.c (rb_strftime, rb_strftime_timespec): return formatted
	  string, not the length put in the given buffer.

	* time.c (rb_strftime_alloc): no longer needs to retry with
	  reallocating buffers.

	* time.c (time_strftime): no longer needs to split by NUL chars.

Wed Mar 23 14:23:54 2016  NARUSE, Yui  <naruse@ruby-lang.org>

	* lib/rdoc/ri/driver.rb (interactive): rescue NotFoundError raised in
	  expand_name. (display_name rescues NotFoundError by itself,
	  the original logic looks buggy...)

Wed Mar 23 11:44:53 2016  cremno  <cremno@mail.ru>

	* marshal.c (r_long): cast to `signed char`, which is used