@@ -756,6 +756,9 @@ class TestTime < Test::Unit::TestCase
     t = Time.utc(-1,1,4)
     assert_equal("-0001", t.strftime("%Y"))
     assert_equal("-0001", t.strftime("%G"))
+
+    t = Time.utc(10000000000000000000000,1,1)
+    assert_equal("10000000000000000000000", t.strftime("%Y"))
   end
 
   def test_strftime_weeknum
